[gd_scene load_steps=5 format=3 uid="uid://6ykegpdavxm5"]

[ext_resource type="PackedScene" uid="uid://dmnpmcfnvcdqo" path="res://bosses/boss.tscn" id="1_8j7k5"]
[ext_resource type="Script" path="res://bosses/boss_one.gd" id="2_exsp3"]
[ext_resource type="Texture2D" uid="uid://dm13ii247fxnj" path="res://assets/bosses/one.png" id="2_xtfao"]
[ext_resource type="PackedScene" uid="uid://be2etta6wabot" path="res://projectiles/boss/laser_one.tscn" id="4_pwicb"]

[node name="BossOne" instance=ExtResource("1_8j7k5")]
script = ExtResource("2_exsp3")

[node name="Sprite2D" parent="." index="0"]
position = Vector2(81, 34)
scale = Vector2(0.65546, 0.670048)
texture = ExtResource("2_xtfao")

[node name="SpawnerComponent" parent="." index="5"]
scene = ExtResource("4_pwicb")

[node name="LeftMuzzle" type="Marker2D" parent="." index="8"]
position = Vector2(67, 51)

[node name="RightMuzzle" type="Marker2D" parent="." index="9"]
position = Vector2(95, 51)

[node name="FlashComponent" parent="." index="11" node_paths=PackedStringArray("sprite")]
sprite = NodePath("../Sprite2D")

[node name="ScaleComponent" parent="." index="12" node_paths=PackedStringArray("sprite")]
sprite = NodePath("../Sprite2D")
scale_amount = Vector2(0.1, 0.1)

[node name="ShakeComponent" parent="." index="13" node_paths=PackedStringArray("node")]
node = NodePath("..")
